objects/Account.object
<CustomObject>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Professional_License_Exp_Date__c</fullName>
        <label>Entity Professional License Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Professional_License_Legal_Name__c</fullName>
        <label>Entity Professional License Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Professional_License_Trade_Name__c</fullName>
        <label>Entity Professional License Trade Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Professional_License__c</fullName>
        <label>Entity Professional License #</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Admin__c</fullName>
        <label>Estimated Annual Admin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <description>Estimated close date rolled up from Opportunity</description>
        <inlineHelpText>Estimated close date rolled up from Opportunity</inlineHelpText>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_number_of_EEs_c__c</fullName>
        <description>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</description>
        <inlineHelpText>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</inlineHelpText>
        <label>Estimated # of EEs</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FEIN__c</fullName>
        <description>Federal Employer Identification Number</description>
        <inlineHelpText>Federal Employer Identification Number</inlineHelpText>
        <label>FEIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLSA_Campaign_Client_Consultant__c</fullName>
        <inlineHelpText>The internal ProService team member assigned to help this client with any questions regarding the FLSA changes  or the issues around the nationwide injunction of the 12/01/16 increase in the salary annual pay minimum.</inlineHelpText>
        <label>FLSA Campaign Client Consultant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Contractor__c</fullName>
        <label>Federal Contractor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Activity__c</fullName>
        <description>Tracks first activity date. Will get updated when Last Activity Date is empty</description>
        <inlineHelpText>Tracks first activity date. Will get updated when Last Activity Date is empty</inlineHelpText>
        <label>First Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag_Reason_s__c</fullName>
        <label>Flag Reason(s):</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goverment_Subsidy_Call_Routing_2__c</fullName>
        <label>Government Subsidy Call – Routing 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government_Subsidy_Call_Routing_2__c</fullName>
        <label>Government Subsidy Call – Routing 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government_Subsidy_Client_Call_Routi__c</fullName>
        <label>Government Subsidy Call – Routing 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRP_Self_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HRP Self Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Consultant__c</fullName>
        <inlineHelpText>HR Consultant Assignment Methodology:

Hookela - Serena Puaokalani / Jennifer McNamara
Hoomau - Erin Hisano
Kokua - Janelle Leong / Janell Daniels 
Laulima - Erin Hisano 
Lokahi - Janelle Leong 
Pono - Amy Hudson / Jennifer McNamara</inlineHelpText>
        <label>HR Consultant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMY HUDSON</fullName>
                </value>
                <value>
                    <fullName>AMY HUDSON / TIFFANY DONNELLY</fullName>
                </value>
                <value>
                    <fullName>DAVID MCKALE</fullName>
                </value>
                <value>
                    <fullName>DONNA JONES</fullName>
                </value>
                <value>
                    <fullName>ERIN HISANO</fullName>
                </value>
                <value>
                    <fullName>JANELLE LEONG</fullName>
                </value>
                <value>
                    <fullName>JENELL DANIELS</fullName>
                </value>
                <value>
                    <fullName>JENNIFER MCNAMARA</fullName>
                </value>
                <value>
                    <fullName>JENNIFER MCNAMARA / KIMBERLY IWAO</fullName>
                </value>
                <value>
                    <fullName>KIMBERLY IWAO</fullName>
                </value>
                <value>
                    <fullName>NON ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>SERENA PUAOKALANI</fullName>
                </value>
                <value>
                    <fullName>TIFFANY DONNELLY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR__c</fullName>
        <label>HR Associate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ANY AVAILABLE DT HRA</fullName>
                </value>
                <value>
                    <fullName>ANY AVAILABLE HK HRA</fullName>
                    <label>ANY AVAILABLE HRA</label>
                </value>
                <value>
                    <fullName>CALEE GOYA</fullName>
                </value>
                <value>
                    <fullName>JORDAN KAHAHAWAI-WELCH</fullName>
                </value>
                <value>
                    <fullName>SAMANTHA CATALDO</fullName>
                </value>
                <value>
                    <fullName>TONI MITSUMOTO</fullName>
                </value>
                <value>
                    <fullName>VILI HAU</fullName>
                </value>
                <value>
                    <fullName>ANDREW KAM</fullName>
                    <isActive>false</isActive>
                    <label>ANDREW KAM</label>
                </value>
                <value>
                    <fullName>ASKA SHIMADA</fullName>
                    <isActive>false</isActive>
                    <label>ASKA SHIMADA</label>
                </value>
                <value>
                    <fullName>KAEO PAIK</fullName>
                    <isActive>false</isActive>
                    <label>KAEO PAIK</label>
                </value>
                <value>
                    <fullName>KALEY TAMURA / KAEO PAIK</fullName>
                    <isActive>false</isActive>
                    <label>KALEY TAMURA / KAEO PAIK</label>
                </value>
                <value>
                    <fullName>LILY HUI</fullName>
                    <isActive>false</isActive>
                    <label>LILY HUI</label>
                </value>
                <value>
                    <fullName>SARAH WHEELER</fullName>
                    <isActive>false</isActive>
                    <label>SARAH WHEELER</label>
                </value>
                <value>
                    <fullName>TORIE JOAQUIN / ANDREW KAM</fullName>
                    <isActive>false</isActive>
                    <label>TORIE JOAQUIN / ANDREW KAM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handbook_Type__c</fullName>
        <description>Type of Handbook that client/account is utilizing</description>
        <inlineHelpText>Type of Handbook that client/account is utilizing</inlineHelpText>
        <label>Handbook Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Handbook</fullName>
                </value>
                <value>
                    <fullName>ProService HRO</fullName>
                </value>
                <value>
                    <fullName>ProService HRO + Addendum</fullName>
                </value>
                <value>
                    <fullName>ProService PEO</fullName>
                </value>
                <value>
                    <fullName>ProService PEO + Addendum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Specialist__c</fullName>
        <label>Implementation Specialist</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Type__c</fullName>
        <inlineHelpText>AGRICUL/NAT RES - BLUE 
ENTERTAINMENT - WHITE 
MANUFACTURING - BLUE 
TRANSPORT - BLUE 
HEALTH/EDU - WHITE 
FOOD/BEV - WHITE 
MAINTENANCE - BLUE 
RETAIL - WHITE 
PROFESSIONAL - WHITE 
CONSTRUCTION - BLUE</inlineHelpText>
        <label>Industry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Blue Collar</fullName>
                </value>
                <value>
                    <fullName>White Collar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Info_Gathering_Date__c</fullName>
        <description>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Info Gathering."</description>
        <inlineHelpText>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Info Gathering."</inlineHelpText>
        <label>Info Gathering Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intake_Meeting_Date__c</fullName>
        <description>Read-only populated from Opportunity - Date when OPEN opportunity field "Intake meeting Date" was updated.</description>
        <inlineHelpText>Read-only populated from Opportunity - Date when OPEN opportunity field "Intake meeting Date" was updated.</inlineHelpText>
        <label>Intake Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Island_s__c</fullName>
        <description>Organization's main office location</description>
        <inlineHelpText>Organization's main office location</inlineHelpText>
        <label>Island(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Kauai</fullName>
                </value>
                <value>
                    <fullName>Maui</fullName>
                </value>
                <value>
                    <fullName>Oahu</fullName>
                </value>
                <value>
                    <fullName>Lanai</fullName>
                </value>
                <value>
                    <fullName>Molokai</fullName>
                </value>
                <value>
                    <fullName>Multiple Locations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KAISER__c</fullName>
        <label>KAISER</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KARS_Admin__c</fullName>
        <label>KARS Admin</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KARS_Grouped_Admin__c</fullName>
        <label>KARS Grouped Admin</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kaiser_Notes__c</fullName>
        <label>Kaiser Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_AM_F2F__c</fullName>
        <formula>IF(AND(Last_F2F_Meeting_Date__c  &gt;=  (TODAY() - 365),
        Last_F2F_Meeting_Date__c &lt;= TODAY()
		),
    True,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months AM F2F</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_F2F_Meeting_Date__c</fullName>
        <label>Last F2F Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_NPS_Score_FOR_REPORTS__c</fullName>
        <description>Use this in reports to display "DNR" if the client has not taken the survey. Otherwise, it will display a "0"</description>
        <formula>IF (
ISBLANK ( Last_NPS_Score__c), "DNR", TEXT(Last_NPS_Score__c)
    )</formula>
        <inlineHelpText>Use this in reports to display "DNR" if the client has not taken the survey. Otherwise, it will display a "0"</inlineHelpText>
        <label>Last NPS Score (FOR REPORTS)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_NPS_Score__c</fullName>
        <label>Last NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Date__c</fullName>
        <description>Date of lead read-only because populated from Opportunity (if not Opp, fields from CS Import)</description>
        <inlineHelpText>Date of lead read-only because populated from Opportunity (if not Opp, fields from CS Import)</inlineHelpText>
        <label>Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_CS__c</fullName>
        <description>Not being used.</description>
        <inlineHelpText>Not being used.</inlineHelpText>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BDM: Self Gen - BDM</fullName>
                </value>
                <value>
                    <fullName>Referral Partner - AIS</fullName>
                </value>
                <value>
                    <fullName>Referral Partner - HIIFS</fullName>
                </value>
                <value>
                    <fullName>Client Referral - Web</fullName>
                </value>
                <value>
                    <fullName>Client Referral - Winback</fullName>
                </value>
                <value>
                    <fullName>Client Referral - Internal EE</fullName>
                </value>
                <value>
                    <fullName>Client Referral - HR Training</fullName>
                </value>
                <value>
                    <fullName>Client Referral - AM</fullName>
                </value>
                <value>
                    <fullName>Marketing - JA</fullName>
                </value>
                <value>
                    <fullName>Marketing - Campaign</fullName>
                </value>
                <value>
                    <fullName>Marketing - Event</fullName>
                </value>
                <value>
                    <fullName>Marketing - Web/Call in</fullName>
                </value>
                <value>
                    <fullName>Internal Lead</fullName>
                </value>
                <value>
                    <fullName>HiHR-PS Merger Client</fullName>
                </value>
                <value>
                    <fullName>Call-In Front Office</fullName>
                </value>
                <value>
                    <fullName>Walk-In Front Office</fullName>
                </value>
                <value>
                    <fullName>Client Referral - Call In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Date of lead read-only because populated from Opportunity (if not Opp, fields from CS Import)</description>
        <inlineHelpText>Date of lead read-only because populated from Opportunity (if not Opp, fields from CS Import)</inlineHelpText>
        <label>Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <label>NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Month_Date2__c</fullName>
        <description>IF(  (ISPICKVAL( VOC_Survey_Month__c , "January"))  ,  DATE(2018, 1, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "February"))  ,  DATE(2018, 2, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "March"))  ,  DATE(2018, 3, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "April"))  ,  DATE(2018, 4, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "May"))  ,  DATE(2018, 5, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "June"))  ,  DATE(2018, 6, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "July"))  ,  DATE(2018, 7, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "August"))  ,  DATE(2018, 8, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "September"))  ,  DATE(2018, 9, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "October"))  ,  DATE(2018, 10, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "November"))  ,  DATE(2018, 11, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "December"))  ,  DATE(2017, 12, 1) , null)
)))))))))))</description>
        <formula>CASE(
VOC_Survey_Month__c,
"January",DATE(2018,1,1),
"February",DATE(2018,2,1),
"March",DATE(2018,3,1),
"April",DATE(2018,4,1),
"May",DATE(2018,5,1),
"June",DATE(2018,6,1),
"July",DATE(2018,7,1),
"August",DATE(2018,8,1),
"September",DATE(2018,9,1),
"October",DATE(2018,10,1),
"November",DATE(2018,11,1),
"December",DATE(2017,12,1),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Survey Month (Date2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Month_Date3__c</fullName>
        <description>Proxy for NPS Survey Month (Date) field, utilizing field update, to avoid formula max character limit on other fields needing data from NPS Survey Month (Date) field.</description>
        <label>NPS Survey Month (Date3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Month_Date__c</fullName>
        <formula>IF(  (ISPICKVAL( VOC_Survey_Month__c , "January"))  ,  DATE(2018, 1, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "February"))  ,  DATE(2018, 2, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "March"))  ,  DATE(2018, 3, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "April"))  ,  DATE(2018, 4, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "May"))  ,  DATE(2018, 5, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "June"))  ,  DATE(2018, 6, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "July"))  ,  DATE(2018, 7, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "August"))  ,  DATE(2018, 8, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "September"))  ,  DATE(2018, 9, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "October"))  ,  DATE(2018, 10, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "November"))  ,  DATE(2018, 11, 1) , 
IF(  (ISPICKVAL( VOC_Survey_Month__c , "December"))  ,  DATE(2017, 12, 1) , null)
)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Survey Month (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Negotiate_Review_Date__c</fullName>
        <description>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Negotiation."</description>
        <inlineHelpText>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Negotiation."</inlineHelpText>
        <label>Negotiate/Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Referrer_in_Q3__c</fullName>
        <description>AND(
    AND(
        X2017_Q3_Last_Referral_Date__c  &gt;=  DATE(2017,07,01),
        X2017_Q3_Last_Referral_Date__c  &lt;=  DATE(2017,09,30)
        ),
    ISBLANK(X2017_Q1_Q2_Last_Referral_Date__c) )</description>
        <formula>AND(
    AND(
        Date_of_Last_Referral__c  &gt;=  DATE(2017,07,01),
        Date_of_Last_Referral__c  &lt;=  DATE(2017,09,30)
        ),
    ISBLANK(Already_Referred_Prior_to_07_01__c) )</formula>
        <label>New Referrer in Q3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Pay_Date__c</fullName>
        <description>Field is imported from Payroll Systems daily</description>
        <inlineHelpText>Field is imported from Payroll Systems daily</inlineHelpText>
        <label>Next Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumOpportunities__c</fullName>
        <description>Number of Opportunities (to determine if PB should kick off or if Opps already exist)</description>
        <label>NumOpportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OE_Address__c</fullName>
        <label>OE Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OE_Call_Routing_Option_1__c</fullName>
        <label>OE Call Routing Option 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Call_Routing_Option_2__c</fullName>
        <label>OE Call Routing Option 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Client_Materials__c</fullName>
        <formula>HYPERLINK("file://psfil01/Company-Content-INTERNAL/","OE Client Materials")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OE Client Materials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Client_Packet_Deployment_Status__c</fullName>
        <description>OE Client Packet Deployment Status</description>
        <inlineHelpText>OE Client Packet Deployment Status</inlineHelpText>
        <label>OE Client Packet Deployment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Client_Selection_Due_Date__c</fullName>
        <description>OE Client Selection Due Date</description>
        <inlineHelpText>OE Client Selection Due Date</inlineHelpText>
        <label>OE Client Selection Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OE_Contact__c</fullName>
        <label>OE Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_EE_Mailing_Client_Address__c</fullName>
        <label>EE Mailing - Client Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OE_EE_Mailing_Client_Contact__c</fullName>
        <label>EE Mailing - Client Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_EE_Mailing_Date__c</fullName>
        <label>EE Mailing Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_First_Engagement_Client_Temp__c</fullName>
        <description>Client temperature read from the open enrollment first engagement call</description>
        <label>First Engagement Client Temp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OE_First_Engagement_Completed_Date__c</fullName>
        <description>Date that OE first engagement was marked as complete.</description>
        <label>First Engagement Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OE_First_Engagement_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the open enrollment first engagement been completed?</description>
        <label>First Engagement Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OE_First_Engagement_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the open enrollment first engagement</description>
        <label>First Engagement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OE_First_Engagement_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OE_First_Engagement_Wave__c</fullName>
        <description>Wave description for the open enrollment first engagement call down.</description>
        <label>First Engagement Wave</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Mailing_Notes__c</fullName>
        <label>OE Mailing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Status__c</fullName>
        <description>Open Opportunity Status</description>
        <inlineHelpText>Open Opportunity Status</inlineHelpText>
        <label>Current Opportunity Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities_Not_Closed__c</fullName>
        <label>Opportunities Not Closed</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Lost, Closed Won, Disqualified</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Start_Date__c</fullName>
        <description>Expected start date for group rolled up from Opportunity.  Should be at least 3 weeks out from estimated close date.</description>
        <inlineHelpText>Expected start date for group rolled up from Opportunity.  Should be at least 3 weeks out from estimated close date.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <label>Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <label>Owner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_Title__c</fullName>
        <label>Owner Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <description>Hack hyperlink to server directory</description>
        <inlineHelpText>Hack hyperlink to server directory</inlineHelpText>
        <label>psfil01/Company-Content-INTERNAL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Cycle__c</fullName>
        <label>Payroll Cycle</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Processor_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payroll Processor Lookup</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Assigned user must be part of the Payroll Analyst Team.</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Payroll Analysts</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payroll_Processor__c</fullName>
        <label>Payroll Processor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Name_s__c</fullName>
        <description>If a client's contract has a Personal Guarantor(s), this field will list out the names of those individuals.</description>
        <inlineHelpText>If a client's contract has a Personal Guarantor(s), this field will list out the names of those individuals.</inlineHelpText>
        <label>Personal Guarantor Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Status__c</fullName>
        <description>This identifies whether or not a client's contract does or does not have a Personal Guarantor.</description>
        <inlineHelpText>This identifies whether or not a client's contract does or does not have a Personal Guarantor. This is used primarily for reporting to our banking partner.</inlineHelpText>
        <label>Personal Guarantor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PG</fullName>
                </value>
                <value>
                    <fullName>No PG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Play_For_Keeps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this client currently on the "Play For Keeps" list?</description>
        <label>Play For Keeps?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <description>See following link for details on why this field was added:
https://success.salesforce.com/answers?id=9063000000048RbAAI</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_OE_Call_Routing__c</fullName>
        <label>Pre-OE Call Routing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ANGIE NAKASONE - EXT 3145</fullName>
                </value>
                <value>
                    <fullName>BRITTANY QUIGG - EXT 6951</fullName>
                </value>
                <value>
                    <fullName>DARREN EBISU - EXT 4153</fullName>
                </value>
                <value>
                    <fullName>DIANNA MCGRAW - EXT 3146</fullName>
                </value>
                <value>
                    <fullName>HARRY BYERLY - EXT 6953990</fullName>
                </value>
                <value>
                    <fullName>JOHN DEMARCO - EXT 6775</fullName>
                </value>
                <value>
                    <fullName>JORDAN WONG - EXT 4128</fullName>
                </value>
                <value>
                    <fullName>KEVIN YAMADA - EXT 4155</fullName>
                </value>
                <value>
                    <fullName>LARRY HUBBELL - EXT 3196</fullName>
                </value>
                <value>
                    <fullName>MARK SHIMAN - EXT 4435425</fullName>
                </value>
                <value>
                    <fullName>NATALIE SPENCER - EXT 6791</fullName>
                </value>
                <value>
                    <fullName>ROB GALLO - EXT 6954233</fullName>
                </value>
                <value>
                    <fullName>STACY CASCO - EXT 4428562</fullName>
                </value>
                <value>
                    <fullName>TONY GUZZARDO - EXT 6771</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Group__c</fullName>
        <label>Pricing Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Submit_Date__c</fullName>
        <description>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Pricing."</description>
        <inlineHelpText>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Pricing."</inlineHelpText>
        <label>Pricing Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Cell_Phone__c</fullName>
        <description>Primary Contact Cell Phone</description>
        <label>Primary Contact Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProAccounting_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProAccounting Client</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>